# Hamlib

./: .gitignore  API  AUTHORS  Android.mk  CONTRIBUTING.md  COPYING.LIB  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.Windows  Makefile.am  Makefile.in  NEWS  PLAN  README  README.betatester  README.coding_style  README.developer  README.freqranges  README.license  README.md  README.multicast  README.osx  README.release  README.win32  README.windows  README_VB  ReleaseNotes_4.7.md  ReleaseNotes_5.0.md  SECURITY.md  Segfault-award  THANKS  TODO  TODO.skeleton  VFOs.txt  acinclude.m4  aclocal.m4  astyle.sh  autofixer.sh  (+16 more)
.github/: codeql-analysis.yml
adat/: Android.mk  Makefile.am  adat.c  adat.h  adt_200a.c  adt_200a.h
alinco/: Android.mk  Makefile.am  Makefile.in  alinco.c  alinco.h  dx77.c
amsat/: Android.mk  Makefile.am  if100.c
android/: Makefile.am  Makefile.in  README.android  config.h  hamlib-compile  ltdl.c  ltdl.h
aor/: Android.mk  Makefile.am  Makefile.in  README.aor  README.ar5000  aor.c  aor.h  ar2700.c  ar3000.c  ar3030.c  ar5000.c  ar7030.c  ar7030p.c  ar7030p.h  ar7030p_utils.c  ar8000.c  ar8200.c  ar8600.c  sr2200.c
ars/: Android.mk  Makefile.am  Makefile.in  ars.c  ars.h
barrett/: Android.mk  Makefile.am  barrett.c  barrett.h
bindings/: Makefile.PL  Makefile.am  Makefile.in  README.python  __init__.py  amplifier.swg  hamlib.swg  hamlibvb.bas.in  ignore.swg  luatest.lua  macros.swg  perltest.pl  phpdemo.php  py3test.py  pytest.py  rig.swg  rotator.swg  tcltest.tcl  tcltest.tcl.in
bindings/csharp/hamlibgui/: MainWindow.cs  MainWindow.glade  Program.cs  README.txt  hamlibgui.csproj
bindings/csharp/multicast/: PLAN.txt  README.txt  multicast.cs  multicast.csproj  test.json
bindings/python/: conftest.py  generate_tests.py  test_Hamlib_Amp_class.py  test_Hamlib_Rig_class.py  test_Hamlib_Rot_class.py  test_Hamlib_class.py  test_amp.py  test_rig.py  test_rot.py  test_startup.py
c++/: .gitignore  Makefile.am  Makefile.in  ampclass.cc  rigclass.cc  rotclass.cc  testcpp.cc
celestron/: Android.mk  Makefile.am  celestron.c  celestron.h
cgirig/: CGILib.cpp  CGILib.h  RpcRigClient.cpp  (+2 more)
doc/: Hamlib_design.eps  Makefile.am  Makefile.in  NOTES  README.Doxygen  README.ft920  README.man-pages  footer.html  getting_started.texi  hamlib-doc  hamlib.cfg  hamlib.cfg.in  hamlib.css  hamlib.texi  index.doxygen  nutshell.texi  split-man.pl  utility_programs.texi
doc/man1/: ampctl.1  ampctld.1  rigctl.1  rigctlcom.1  rigctld.1  rigctlsync.1  rigctltcp.1  rigmem.1  rigsmtr.1  rigswr.1  rigtestlibusb.1  rigtestmcast.1  rigtestmcastrx.1  rotctl.1  rotctld.1
doc/man7/: hamlib-primer.7  hamlib-utilities.7  hamlib.7
doc/sgml/: README.txt  backend.sgml  genindex.sgml  hamlib-doc.dsl  hamlib-doc.sgml  internals.sgml  intro.sgml  preface.sgml  reference.sgml  using.sgml
drake/: Android.mk  Makefile.am  drake.c  drake.h  r8a.c  r8b.c
dummy/: Android.mk  Makefile.am  Makefile.in  amp_dummy.c  dummy.c  dummy.h  flrig.README  flrig.c  flrig.h  netampctl.c  netrigctl.c  netrotctl.c  rot_dummy.c  rot_dummy.h  trxmanager.c  trxmanager.h
easycomm/: Android.mk  Makefile.am  Makefile.in  easycomm.c  easycomm.h  easycomm.txt
ether6/: Android.mk  Makefile.am  README.ether6  ether6.c  ether6.txt
flexradio/: Android.mk  Makefile.am  dttsp.c  flexradio.c  flexradio.h  sdr1k.c  sdr1k.h
fodtrack/: Android.mk  Makefile.am  fodtrack.c  fodtrack.h
gnuradio/: HrAGC.h  Makefile.am  am.h  demod.h  gnuradio.cc  gnuradio.h  gr.c  gr_priv.h  graudio.c  mc4020.c  nfm.h  ssb.h  testgr.cc  wfm.h
gs232a/: Android.mk  Makefile.am  gs232.c  gs232a.c  gs232a.h  gs232b.c
heathkit/: Android.mk  Makefile.am  hd1780.c  hd1780.h
icom/: Android.mk  Makefile  Makefile.am  Makefile.in  README.icom  TODO.icom  delta2.c  frame.c  frame.h  ic1275.c  ic271.c  ic2730.c  ic275.c  ic471.c  ic475.c  ic7000.c  ic703.c  ic706.c  ic707.c  ic7100.c  ic718.c  ic7200.c  ic725.c  ic726.c  ic728.c  ic7300.c  ic735.c  ic736.c  ic737.c  ic738.c  ic7400.c  ic7410.c  ic746.c  ic751.c  ic756.c  ic7600.c  ic761.c  ic7610.c  ic765.c  ic7700.c  (+42 more)
icom/doc/: hamlib.cfg
icom/include/: config.h
include/: Makefile.am  Makefile.in  bandplan.h  config.h.in  hl_sleep.h  num_stdio.h  rig.h  riglist.h
include/hamlib/: Makefile.am  Makefile.in  amp_state.h  ampclass.h  amplifier.h  amplist.h  multicast.h  port.h  rig.h  rig_dll.h  rig_state.h  rigclass.h  riglist.h  rot_state.h  rotator.h  rotclass.h  rotlist.h  winpthreads.h
jrc/: Android.mk  Makefile.am  Makefile.in  jrc.c  jrc.h  nrd525.c  nrd535.c  nrd545.c
kachina/: 505dsp.c  Android.mk  Makefile.am  Makefile.in  kachina.c  kachina.h
kenwood/: Android.mk  Makefile.am  Makefile.in  README.k2  README.k3  README.kenwood  README.ts2k  elecraft.c  elecraft.h  flex.c  flex6xxx.c  ic10.c  ic10.h  k2.c  k3.c  kenwood.c  kenwood.h  pihpsdr.c  r5000.c  th.c  th.h  thd7.c  thd72.c  thd74.c  thf6a.c  thf7.c  thg71.c  tmd700.c  tmd710.c  tmv7.c  transfox.c  trc80.c  ts140.c  ts2000.c  ts2000.c.orig  ts2000.h  ts2000.txt  ts2k.c  ts2k.h  ts2k.status  (+21 more)
kit/: Android.mk  Makefile.am  README.funcubedongle  dds60.c  drt1.c  dwt.c  elektor304.c  elektor507.c  fifisdr.c  funcube.c  funcube.h  hiqsdr.c  kit.c  kit.h  miniVNA.c  pcrotor.c  rs_hfiq.c  si570avrusb.c  si570avrusb.h  usrp.c  usrp_impl.cc  usrp_impl.h
lowe/: Android.mk  Makefile.am  hf235.c  lowe.c  lowe.h
macros/: Makefile.am  Makefile.in  ac_python_devel.m4  ax_lib_indi.m4  ax_lib_nova.m4  ax_lib_readline.m4  ax_lua.m4  ax_pkg_swig.m4  ax_python_devel.m4  gr_doxygen.m4  gr_pwin32.m4  gr_swig.m4  hl_getaddrinfo.m4  libtool.m4  libxml.m4  libxml2.m4  ltdl.m4  perl.m4  python.m4  tcl.m4
microtune/: Makefile.am  givelp1.cc  i2c.cc  i2c.h  i2cio.cc  i2cio.h  i2cio_pp.cc  i2cio_pp.h  microtune.cc  microtune.h  microtune_4702.cc  microtune_4702.h  microtune_4937.cc  microtune_4937.h  microtune_eval_board.cc  microtune_eval_board.h  microtune_eval_board_defs.h  module_4702.c  module_4937.c  ppio.cc  ppio.h
pcr/: Android.mk  Makefile.am  Makefile.in  pcr.c  pcr.h  pcr100.c  pcr1000.c  pcr1500.c  pcr2500.c
(+1504 files in other folders)
